# SPSSR

./: Cargo.toml  LICENSE.md  Makefile  README.md  build.rs
password_manager.db/: db  snap.000000000002F368
proto/: qusend.proto
src/: main.rs
