[package]
name = "cryptothingy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
blake3 = "1.5.0"
byteorder = "1.5.0"
chacha20poly1305 = "0.10.1"
crystals-dilithium = "1.0.0"
hkdf = "0.12.4"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
sharks = "0.5.0"
sled = "0.34.7"
tfhe = { version = "0.5.2", features = ["integer", "x86_64", "nightly-avx512" ] }

[dependencies.pqc_kyber]
version = "0.7.1"
features = ["kyber1024", "std"]

